--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@pixi/react": "^8.0.3",
     "@pixiv/three-vrm": "^3.4.4",
     "@pixiv/three-vrm-animation": "^3.4.4",
     "@react-three/drei": "^10.7.6",
@@ -16,7 +17,7 @@
     "axios": "^1.13.1",
     "next": "16.0.1",
     "pixi-live2d-display": "^0.3.1",
-    "pixi.js": "^8.14.0",
+    "pixi.js": "^8.14.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "three": "^0.181.0"
